apps/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: ntfy.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: ntfy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ntfy.sanxer.dk
      secretName: ntfy-tls
